Bug 299108 - Crash when closing while folder still loads
Summary: Crash when closing while folder still loads
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-30 13:58 UTC by Christoph Feck
Modified: 2012-04-30 16:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-04-30 13:58:51 UTC
When I start Dolphin, and immediately close it, before all thumbnails are displayed, then I get this crash after the window got closed. Looks like a timer isn't stopped somewhere. Today's master.

Program received signal SIGSEGV, Segmentation fault.
bt0xb7e5e4ed in KItemListView::doLayout (this=0x82327b8, hint=KItemListView::Animation, changedIndex=0, changedCount=0) at /local/git/KDE/base/kde-baseapps/dolphin/src/kitemviews/kitemlistview.cpp:1498
1498        if (!m_model || m_model->count() < 0) {
(gdb) bt
#0  0xb7e5e4ed in KItemListView::doLayout (this=0x82327b8, hint=KItemListView::Animation, changedIndex=0, changedCount=0)
    at /local/git/KDE/base/kde-baseapps/dolphin/src/kitemviews/kitemlistview.cpp:1498
#1  0xb7e5d5ba in KItemListView::slotLayoutTimerFinished (this=0x82327b8) at /local/git/KDE/base/kde-baseapps/dolphin/src/kitemviews/kitemlistview.cpp:1269
#2  0xb7e62889 in KItemListView::qt_static_metacall (_o=0x82327b8, _c=QMetaObject::InvokeMetaMethod, _id=21, _a=0xbfffe5f0) at /local/build/KDE/base/kde-baseapps/dolphin/src/kitemlistview.moc:144
#3  0xb6cafdc2 in QMetaObject::activate (sender=0x8232d80, m=0xb6e4a44c, local_signal_index=0, argv=0x0) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qobject.cpp:3547
#4  0xb6d0b1ff in QTimer::timeout (this=0x8232d80) at .moc/debug-shared/moc_qtimer.cpp:148
#5  0xb6cb85ec in QTimer::timerEvent (this=0x8232d80, e=0xbfffec44) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qtimer.cpp:280
#6  0xb6cab1a4 in QObject::event (this=0x8232d80, e=0xbfffec44) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qobject.cpp:1157
#7  0xb5eb8824 in QApplicationPrivate::notify_helper (this=0x806fa90, receiver=0x8232d80, e=0xbfffec44) at /local/git/Qt/frameworks/qt/src/gui/kernel/qapplication.cpp:4551
#8  0xb5eb60a8 in QApplication::notify (this=0xbfffef44, receiver=0x8232d80, e=0xbfffec44) at /local/git/Qt/frameworks/qt/src/gui/kernel/qapplication.cpp:3933
#9  0xb73d96b6 in KApplication::notify (this=0xbfffef44, receiver=0x8232d80, event=0xbfffec44) at /local/git/KDE/libs/kdelibs/kdeui/kernel/kapplication.cpp:311
#10 0xb6c9405a in QCoreApplication::notifyInternal (this=0xbfffef44, receiver=0x8232d80, event=0xbfffec44) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qcoreapplication.cpp:915
#11 0xb6c978d3 in QCoreApplication::sendEvent (receiver=0x8232d80, event=0xbfffec44) at ../../include/QtCore/../../../../git/Qt/frameworks/qt/src/corelib/kernel/qcoreapplication.h:231
#12 0xb6cce7ed in QTimerInfoList::activateTimers (this=0x806e784) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qeventdispatcher_unix.cpp:611
#13 0xb6ccb376 in timerSourceDispatch (source=0x806e750) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:186
#14 0xb6ccb42e in idleTimerSourceDispatch (source=0x806e128) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:233
#15 0xb4fdf761 in g_main_dispatch (context=0x806e650) at gmain.c:2515
#16 g_main_context_dispatch (context=0x806e650) at gmain.c:3052
#17 0xb4fdfbe0 in g_main_context_iterate (context=0x806e650, block=1, dispatch=1, self=Unhandled dwarf expression opcode 0xfa
) at gmain.c:3123
#18 0xb4fdfcc1 in g_main_context_iteration (context=0x806e650, may_block=1) at gmain.c:3184
#19 0xb6ccbcb2 in QEventDispatcherGlib::processEvents (this=0x806a768, flags=...) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:424
#20 0xb5f83ef6 in QGuiEventDispatcherGlib::processEvents (this=0x806a768, flags=...) at /local/git/Qt/frameworks/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#21 0xb6c91709 in QEventLoop::processEvents (this=0xbfffeecc, flags=...) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qeventloop.cpp:149
#22 0xb6c91881 in QEventLoop::exec (this=0xbfffeecc, flags=...) at /local/git/Qt/frameworks/qt/src/corelib/kernel/qeventloop.cpp:204
#23 0xb6c946f0 in QCoreApplication::exec () at /local/git/Qt/frameworks/qt/src/corelib/kernel/qcoreapplication.cpp:1187
#24 0xb5eb5d3a in QApplication::exec () at /local/git/Qt/frameworks/qt/src/gui/kernel/qapplication.cpp:3812
#25 0xb7f7acf5 in kdemain (argc=1, argv=0xbffff124) at /local/git/KDE/base/kde-baseapps/dolphin/src/main.cpp:89
#26 0x08048881 in main (argc=1, argv=0xbffff124) at /local/build/KDE/base/kde-baseapps/dolphin/src/dolphin_dummy.cpp:3
Comment 1 Peter Penz 2012-04-30 16:58:45 UTC
Git commit c2539104b30ab2c1dc879016072b03ba8ce72941 by Peter Penz.
Committed on 30/04/2012 at 18:54.
Pushed by ppenz into branch 'master'.

Fix crash when closing Dolphin during generating previews
FIXED-IN: 4.9.0

M  +0    -2    dolphin/src/kitemviews/kfileitemlistview.cpp
M  +8    -4    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +4    -6    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/c2539104b30ab2c1dc879016072b03ba8ce72941