Fix crash when closing Dolphin during generating previews

BUG: 299108
FIXED-IN: 4.9.0